# bootstrapping-microservices-rust

./: .gitignore
ch02/my-new-project/: Cargo.toml  Dockerfile  Dockerfile.with-build
ch02/my-new-project/src/: main.rs
ch04/example-1/: Cargo.toml  docker-compose.yml
ch04/example-1/video-storage/: Cargo.toml  Dockerfile
ch04/example-1/video-storage/src/: main.rs
ch04/example-1/video-streaming/: Cargo.toml  Dockerfile
ch04/example-3/: .dockerignore  Cargo.toml  Readme.md  docker-compose.yml
ch04/example-3/video-storage/src/: main.rs
ch04/example-3/video-streaming/: Cargo.toml  Dockerfile
ch04/example-3/video-streaming/src/: main.rs
ch05/example-1/: Cargo.toml  Dockerfile.build  Readme.md  docker-compose-prod.yml  docker-compose.yml
ch05/example-1/history/: .dockerignore  Cargo.toml  Dockerfile-dev  Dockerfile-prod
ch05/example-1/history/src/: main.rs
ch05/example-1/video-storage/: Dockerfile  Dockerfile-dev  Dockerfile-prod
ch05/example-1/video-streaming/: Cargo.toml  Dockerfile-dev  Dockerfile-prod
ch05/example-1/video-streaming/src/: main.rs
