[package]
name = "video-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
azure_core = "0.27.0"
azure_identity = "0.27.0"
azure_storage_blob = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name="video-storage"
