[package]
name = "video-streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
http-body-util = "0.1.3"
reqwest = { version = "0.12.22", features = ["stream"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
serde = { version = "1.0.210", features = ["derive"] }
futures = "0.3.30"

[dependencies.mongodb]
version = "3.2.4"
